--- a/index.html
+++ b/index.html
@@ -32,5 +32,57 @@
             </p>
         </div>
     </header>
+
+    <div class="contenedor contenido-principal">
+        <main class="blog">
+            <h3>Nuesto Blog</h3>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog1.webp" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de Grano de Café</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis minus, atque ipsum architecto corrupti praesentium. Natus, corrupti, illo voluptates minus excepturi, blanditiis rerum earum at tenetur optio provident enim?
+                    </p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog2.webp" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tres Deliciosas Recetas de Café</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis minus, atque ipsum architecto corrupti praesentium. Natus, corrupti, illo voluptates minus excepturi, blanditiis rerum earum at tenetur optio provident enim?
+                    </p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="img/blog3.webp" alt="imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Beneficios del Café</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis minus, atque ipsum architecto corrupti praesentium. Natus, corrupti, illo voluptates minus excepturi, blanditiis rerum earum at tenetur optio provident enim?
+                    </p>
+                    <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros Cursos y Talleres</h3>
+        </aside>
+    </div>
+    
 </body>
 </html>
