--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página web de blog de café">
     <title>BlogDeCafé</title>
+    <!-- Prefetch (carga la siguiente pagina a la cual se iria) -->
+    <link rel="Prefetch" href="nosotros.html" as="document">
+
+    <!-- Preload (carga elementos al cargar la pagina) -->
+    <link rel="Preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
+    
+    <link rel="Preload" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet" as="fonts" crossorigin="crossorigin">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="Preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <header class="header">
@@ -39,7 +50,10 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog1.webp" alt="imagen blog">
+                    <picture>
+                        <source srcset="img/blog1.webp" type="image/webp" loading="lazy">
+                        <img src="img/blog1.jpg" alt="imagen blog" loading="lazy">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -53,7 +67,10 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog2.webp" alt="imagen blog">
+                    <picture>
+                        <source srcset="img/blog2.webp" type="image/webp" loading="lazy">
+                        <img src="img/blog2.webp" alt="imagen blog" loading="lazy">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -67,7 +84,10 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/blog3.webp" alt="imagen blog">
+                    <picture>
+                        <source srcset="img/blog3.webp" type="image/webp" loading="lazy">
+                        <img src="img/blog3.webp" alt="imagen blog" loading="lazy">
+                    </picture>
                 </div>
 
                 <div class="entrada__contenido">
@@ -129,5 +149,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/modernizr.js"></script>
 </body>
 </html>
