CREATE screenshots folder in img folder

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
+    <!-- Prefetch (carga la siguiente pagina a la cual se iria) -->
+    <link rel="Prefetch" href="nosotros.html" as="document">
+
     <!-- Preload (carga elementos al cargar la pagina) -->
     <link rel="Preload" href="css/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
@@ -74,5 +77,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="js/modernizr.js"></script>
 </body>
 </html>
